--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div id="map"></div>
-  <script src="ne_10m_time_zones.geojson" type="text/javascript"></script>
+  <script src="ne_10m_time_zones.js" type="text/javascript"></script>
   <script src="sketch.js" type="text/javascript"></script>
 </body>
 
