--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       <div id="time">00:00:00</div>
     </div>
   </div>
+  <div class="states">
+    <div id="table"></div>
+  </div>
   <div id="map"></div>
+  <script src="additional-data.js" type="text/javascript"></script>
   <script src="ne_10m_time_zones.js" type="text/javascript"></script>
   <script src="sketch.js" type="text/javascript"></script>
 </body>
