--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <div id="map"></div>
   <script src="additional-data.js" type="text/javascript"></script>
   <script src="ne_10m_time_zones.js" type="text/javascript"></script>
+  <script src="capital-cities.js" type="text/javascript"></script>
   <script src="sketch.js" type="text/javascript"></script>
 </body>
 
