refactor and fixed few bugs

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     <div id="table"></div>
   </div>
   <div id="map"></div>
-  <script src="additional-data.js" type="text/javascript"></script>
-  <script src="ne_10m_time_zones.js" type="text/javascript"></script>
-  <script src="capital-cities.js" type="text/javascript"></script>
-  <script src="sketch.js" type="text/javascript"></script>
+
+  <script src="helper.js" type="text/javascript"></script>
+  <script src="date_helper.js" type="text/javascript"></script>
+  <script src="structure.js" type="text/javascript"></script>
+
+  <script src="countries_data.js" type="text/javascript"></script>
+  <script src="time_zones_data.js" type="text/javascript"></script>
+  <script src="capital_cities_data.js" type="text/javascript"></script>
+
+  <script src="main.js" type="text/javascript"></script>
 </body>
 
 </html>
