--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
   </div>
   <div id="map"></div>
 
+  <canvas class="confetti" id="canvas"></canvas>
+
   <script src="helper.js" type="text/javascript"></script>
+
+  <script src="confetti.js" type="text/javascript"></script>
+
   <script src="date_helper.js" type="text/javascript"></script>
   <script src="structure.js" type="text/javascript"></script>
 
