full screen on click

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </head>
 
 <body>
-  <div class="overlay">
+  <div class="overlay" id="time-div">
     <div class="overlay-content">
       <h4>Happy New Year</h4>
       <div id="time">00:00:00</div>
     </div>
   </div>
-  <div class="states">
+  <div class="states" id="states">
     <div id="table"></div>
   </div>
   <div id="map"></div>
@@ -37,6 +37,8 @@
   <script src="countries_data.js" type="text/javascript"></script>
   <script src="time_zones_data.js" type="text/javascript"></script>
   <script src="capital_cities_data.js" type="text/javascript"></script>
+
+  <script src="phone.js" type="text/javascript"></script>
 
   <script src="main.js" type="text/javascript"></script>
 </body>
